# OpenPortfolio

./: .gitpod.Dockerfile  .gitpod.yml  Dockerfile  LICENSE  README.md  pyproject.toml
build-scripts/: build_all_containers.sh  publish_all_containers.sh
openportfolio/: __init__.py  api.py
