[tool.poetry]
name = "openportfolio"
version = "0.0.0"
description = "Open source finance tracker and visualizer."
authors = ["thomas-schweich <thomas.schweich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
