[tool.poetry]
name = "openportfolio"
version = "0.0.0"
description = "Open source finance tracker and visualizer."
authors = ["thomas-schweich <thomas.schweich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.0"}
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.22"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylint = "^2.9.6"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
